# sec-mcp

./: .dockerignore  .gitignore  Dockerfile  TROUBLESHOOTING_DEPLOYMENT.md  deploy.sh  main.py  pyproject.toml  server.py  test_client.py
.gemini/: settings.json
tools/: base.py  contacts.py  gcs.py
utils/: auth.py
